@@ -1,67 +1,84 @@
-package com.example.eduwheels.Config;
+package com.example.eduwheels.Config; // Adjust package name as needed
 
+import com.example.eduwheels.Entity.UserEntity;
+import com.example.eduwheels.Service.GoogleOAuth2UserService;
+import com.example.eduwheels.Utils.JwtAuthenticationFilter;
+import com.example.eduwheels.Utils.JwtUtil;
+import jakarta.servlet.http.HttpSession; // Import HttpSession
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod; // Import HttpMethod
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder; // Import BCrypt
+import org.springframework.security.crypto.password.PasswordEncoder; // Import PasswordEncoder
 import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.security.crypto.factory.PasswordEncoderFactories;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import com.example.eduwheels.Handler.CustomOAuth2SuccessHandler;
 
 import java.util.Arrays;
+import java.util.HashMap; // Import HashMap
+import java.util.List;
+import java.util.Map; // Import Map
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
+
+    @Autowired
+    private GoogleOAuth2UserService googleOAuth2UserService;
+
+    @Autowired
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Autowired
+    private JwtUtil jwtUtil;
+
+    @Autowired
+    private CustomOAuth2SuccessHandler customOAuth2SuccessHandler;
+
+    // Key to store temporary user details in the HTTP session
+    public static final String PENDING_OAUTH2_USER_ATTRIBUTE_KEY = "pendingOAuth2UserDetails";
+
+    // --- Define PasswordEncoder Bean ---
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return PasswordEncoderFactories.createDelegatingPasswordEncoder();
+    }
+    // ---
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors() // Enable CORS support in Spring Security
-                .and()
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(
-                                "/",
-                                "/login**",          // your React page
-                                "/error",
-                                "/users",
-                                "/users/signup",     // signup API
-                                "/users/login",       // <— allow login API
-                                "/api/vehicles",
-                                "/api/vehicles/{id}",
-                                "/api/vehicles/withPhoto",
-                                "/api/vehicles/updateWithPhoto/{id}",
-                                "/api/vehicles/uploads/**",
-                                "/uploads/"
-
-                        ).permitAll()
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // no sessions for JWT
+                )
+                .authorizeHttpRequests(authz -> authz
+                        .requestMatchers("/users/login", "/users/signup", "/oauth2/**", "/complete-profile").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .anyRequest().authenticated()
                 )
-                .csrf().disable()
-                .formLogin().disable()
-                .httpBasic().disable()
-                .oauth2Login()
-                .loginPage("/login") // Optional: Custom login page (if needed)
-                .successHandler((request, response, authentication) -> {
-                    // Handle login success, here you can extract user info from OAuth2 authentication
-                    // Example: authenticate using user data, or just redirect to a dashboard page
-                    // You can extract the user information like this:
-                    OAuth2AuthenticationToken authToken = (OAuth2AuthenticationToken) authentication;
-                    OAuth2User user = authToken.getPrincipal();
-                    // Then you can extract details like:
-                    String email = user.getAttribute("email");
-                    String firstName = user.getAttribute("given_name");
-                    String lastName = user.getAttribute("family_name");
-
-                    // You can then save this information to your database or take other actions.
-                    // Here you can call a service to save or update the user.
-                })
-                .failureHandler((request, response, exception) -> {
-                    // Handle failure, e.g., user canceled login
-                    response.sendRedirect("/login?error=true");
-                });
+                .oauth2Login(oauth2 -> oauth2
+                        .loginPage("/login")
+                        .successHandler(customOAuth2SuccessHandler)
+                        .failureHandler((request, response, exception) -> {
+                            response.sendRedirect("http://localhost:3000/login?error=oauth_failed");
+                        })
+                )
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .formLogin(form -> form.disable())
+                .httpBasic(basic -> basic.disable());
 
         return http.build();
     }
@@ -69,9 +86,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
